clinics page and other multiple changes done

--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -21,10 +21,10 @@
 
         <ul class="nav-links">
             <i class="fas fa-plus-circle navCloseBtn"></i>
-            <li><a href="#">Home</a></li>
-            <li><a href="/clinics" target="_blank">Clinics</a></li>
+            <li><a href="/dashboard">Home</a></li>
             <li><a href="/clinicadd" target="_blank">Add Clinic</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="/docadd" target="_blank">Add Document</a></li>
+            <li><a href="/clinics" target="_blank">Clinics List</a></li>
         </ul>
 
     <% } %>
