--- a/public/css/clinicadd.css
+++ b/public/css/clinicadd.css
@@ -22,12 +22,8 @@ html{
 
 section{
     padding: 2rem 5%;
-    padding-top: 3rem;
 }
 
-section:nth-child(odd){
-    background: #efedf4;
-}
 
 /* ----****** Ultimate CSS starts now *****---- */
 
@@ -36,7 +32,7 @@ section:nth-child(odd){
     text-shadow: var(--text-shadow);
     color: var(--black);
     font-size: 3.5rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 
 .heading span{
@@ -44,11 +40,6 @@ section:nth-child(odd){
     text-transform: capitalize;
 }
 
-#icon {
-    /* border: 2px solid red; */
-    height: 2rem;
-    width: 2rem;
-}
 
 #menu-btn{
     font-size: 2.5rem;
@@ -64,7 +55,7 @@ section:nth-child(odd){
 /* ***** Booking section CSS ***** */
 
 .book{
-    padding-top: 10rem;
+    padding-top: 6rem;
 }
 
 .book .row{
@@ -86,8 +77,8 @@ section:nth-child(odd){
     flex: 1 1 20rem;
     background: #fff;
     border: var(--border);
-    box-shadow: var(--box-shadow);
     text-align: center;
+    box-shadow: var(--box-shadow);
     padding: 2rem 1.3rem 1.3rem 1.3rem;
     border-radius: 0.8rem;
     margin-top: 1.1rem;
@@ -103,6 +94,7 @@ section:nth-child(odd){
     border-radius: 0.5rem;
     width: 100%;
     margin: 0.4rem 0;
+    
     border: var(--border);
     font-size: 1.1rem;
     padding: 1.1rem;
@@ -150,3 +142,36 @@ textarea{
     margin-right: 0.8rem;
 }
 
+
+.book .row form .days{
+    display: flex; 
+    border: var(--border);
+    padding: 1.2rem;
+    border-radius: 0.5rem;
+}
+
+.book .row form .days input{
+    height: 1.2rem;
+    width: 1.2rem;
+    margin: 0 0.5rem 0 0.5rem;
+    display: inline-block;
+}
+
+.book .row .close-day-heading{
+    font-size: 2.2rem;
+    margin-bottom: 0;
+    padding-bottom: 1rem;
+    text-shadow: none;
+    letter-spacing: 0;
+}
+
+
+.book .row form .days input:hover{
+    color: #777;
+    cursor: pointer;
+}
+
+.book .row form .days label{
+    font-size: 1.1rem;
+    color: var(--black);
+}
