--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -128,6 +128,7 @@ button {
 
 .documents-container .documents .box .image-heading {
     display: flex;
+    margin-bottom: 1rem;
 }
 
 .documents-container .documents .box .image-heading .image img {
