--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -1,148 +1,142 @@
-<!-- ------***** CLINICS SECTION *****------ -->
-<section class="clinics">
+<!DOCTYPE html>
+<html lang="en">
 
-    <h1 class="list-heading">
-        <i class="fas fa-clone"></i>
-        Clinics <span>List</span>
-    </h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clinics</title>
 
-    <div class="swiper slide-container">
+    <link rel="shortcut icon" type="image/xicon" href="./images/logo-modified.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Oxygen&family=Prompt:wght@300&display=swap"
+        rel="stylesheet">
 
-        <div class="slide-content">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-            <div class="swiper-wrapper card-wrapper">
 
-                <div class="swiper-slide clinic">
-                    <div class="clinic-heading">
-                        <h2>ABC Pharmacy</h2>
+    <!-- Some specific CSS for stylings -->
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="./css/clinics.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+
+</head>
+
+<body>
+
+    <!-- header section starts -->
+    <%- include('../partials/navbar.ejs') %>
+
+        <!-- Header section ends -->
+
+        <!-- ------***** CLINICS SECTION *****------ -->
+        <section class="clinics">
+
+            <h1 class="list-heading">
+                <i class="fas fa-clone"></i>
+                Clinics <span>List</span>
+            </h1>
+
+            <div class="swiper slide-container">
+
+                <div class="slide-content">
+
+                    <div class="swiper-wrapper card-wrapper">
+
+                        <% for(var i = 0; i < clinics.length; i++) { %>
+
+                            <div class="swiper-slide clinic">
+                                <div class="clinic-heading">
+                                    <h2> <%= clinics[i].clinic_name %> </h2>
+                                </div>
+    
+                                <div class="clinic-content">
+
+                                    <div class="doc-name">
+                                        <span><i class="fas fa-user-nurse clinic-icon"></i> Doctor : <span
+                                                class="each-content">
+                                                <%= clinics[i].doctor_name %> </span></span>
+                                    </div>
+
+                                    <div class="phone-number">
+                                        <span><i class="fas fa-phone clinic-icon"></i> Phone Number : <span
+                                                class="each-content">
+                                                <%= clinics[i].phone_number %></span></span>
+                                    </div>
+                                    
+                                    <div class="address">
+                                        <span><i class="fas fa-clinic-medical clinic-icon"></i> Address : <span
+                                                class="each-content"> <%= clinics[i].address %></span></span>
+                                    </div>
+                                    <div class="close-day">
+                                        <span><i class="fas fa-window-close clinic-icon"></i> Closed On : <span
+                                                class="each-content"> <%= clinics[i].days + " " %></span></span>
+                                    </div>
+                                </div>
+                            </div>
+
+                        <% } %>
+
                     </div>
 
-                    <div class="clinic-content">
-                        <div class="doc-name">
-                            <span><i class="fas fa-user-nurse clinic-icon"></i> Doctor : <span class="each-content">
-                                    Dr. Abhishek Banerjee</span></span>
-                        </div>
-                        <div class="phone-number">
-                            <span><i class="fas fa-phone clinic-icon"></i> Phone Number : <span class="each-content">
-                                    +91 7029422038</span></span>
-                        </div>
-                        <div class="address">
-                            <span><i class="fas fa-clinic-medical clinic-icon"></i> Address : <span
-                                    class="each-content"> Chingrighata, Kolkata</span></span>
-                        </div>
-                        <div class="close-day">
-                            <span><i class="fas fa-window-close clinic-icon"></i> Closed On : <span
-                                    class="each-content"> Sunday, Thursday</span></span>
-                        </div>
-                    </div>
-                </div>
+                    <div class="swiper-button-next swiper-button"></div>
+                    <div class="swiper-button-prev swiper-button"></div>
+                    <div class="swiper-pagination swiper-pg-button"></div>
 
-
-                <div class="swiper-slide clinic">
-                    <div class="clinic-heading">
-                        <h2>ABC Pharmacy</h2>
-                    </div>
-
-                    <div class="clinic-content">
-                        <div class="doc-name">
-                            <span><i class="fas fa-user-nurse clinic-icon"></i> Doctor : <span class="each-content">
-                                    Dr. Abhishek Banerjee</span></span>
-                        </div>
-                        <div class="phone-number">
-                            <span><i class="fas fa-phone clinic-icon"></i> Phone Number : <span class="each-content">
-                                    +91 7029422038</span></span>
-                        </div>
-                        <div class="address">
-                            <span><i class="fas fa-clinic-medical clinic-icon"></i> Address : <span
-                                    class="each-content"> Chingrighata, Kolkata</span></span>
-                        </div>
-                        <div class="close-day">
-                            <span><i class="fas fa-window-close clinic-icon"></i> Closed On : <span
-                                    class="each-content"> Sunday, Thursday</span></span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="swiper-slide clinic">
-                    <div class="clinic-heading">
-                        <h2>ABC Pharmacy</h2>
-                    </div>
-
-                    <div class="clinic-content">
-                        <div class="doc-name">
-                            <span><i class="fas fa-user-nurse clinic-icon"></i> Doctor : <span class="each-content">
-                                    Dr. Abhishek Banerjee</span></span>
-                        </div>
-                        <div class="phone-number">
-                            <span><i class="fas fa-phone clinic-icon"></i> Phone Number : <span class="each-content">
-                                    +91 7029422038</span></span>
-                        </div>
-                        <div class="address">
-                            <span><i class="fas fa-clinic-medical clinic-icon"></i> Address : <span
-                                    class="each-content"> Chingrighata, Kolkata</span></span>
-                        </div>
-                        <div class="close-day">
-                            <span><i class="fas fa-window-close clinic-icon"></i> Closed On : <span
-                                    class="each-content"> Sunday, Thursday</span></span>
-                        </div>
-                    </div>
                 </div>
 
             </div>
 
-            <div class="swiper-button-next swiper-button"></div>
-            <div class="swiper-button-prev swiper-button"></div>
-            <div class="swiper-pagination swiper-pg-button"></div>
+            <div id="clinic-image">
+                <img src="./images/add files.svg" alt="">
 
-        </div>
+                <span>
+                    <a href="/clinicadd" target="_blank">
+                        <button class="btn">
+                            Add New Clinic <span class="fas fa-angle-double-right"></span>
+                        </button>
+                    </a>
+                </span>
+            </div>
 
-    </div>
-
-    <div id="clinic-image">
-        <img src="./images/add files.svg" alt="">
-
-        <span>
-            <a href="/clinicadd" target="_blank">
-                <button class="btn">
-                    Add New Clinic <span class="fas fa-angle-double-right"></span>
-                </button>
-            </a>
-        </span>
-    </div>
-
-</section>
+        </section>
 
 
-<script src="./js/swiper-bundle.min.js"></script>
 
-<script>
-    var swiper = new Swiper(".slide-content", {
-        slidesPerView: 2,
-        spaceBetween: 30,
-        loop: true,
-        centreSlide: true,
-        grabCursor: true,
-        pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-            dynamicBullets: true
-        },
-        navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
-        },
+        <script src="./js/swiper-bundle.min.js"></script>
 
-        breakpoints: {
-            0: {
-                slidesPerView: 1,
-            },
-            995: {
+        <script>
+            var swiper = new Swiper(".slide-content", {
                 slidesPerView: 2,
-            },
-            1388: {
-                slidesPerView: 3,
-            },
-        },
-    });
-</script>
+                spaceBetween: 30,
+                loop: true,
+                centreSlide: true,
+                grabCursor: true,
+                pagination: {
+                    el: ".swiper-pagination",
+                    clickable: true,
+                    dynamicBullets: true
+                },
+                navigation: {
+                    nextEl: ".swiper-button-next",
+                    prevEl: ".swiper-button-prev",
+                },
+
+                breakpoints: {
+                    0: {
+                        slidesPerView: 1,
+                    },
+                    995: {
+                        slidesPerView: 2,
+                    },
+                    1388: {
+                        slidesPerView: 3,
+                    },
+                },
+            });
+        </script>
+</body>
+
+</html>
