document add section done only image showing left and logout section added

--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -22,10 +22,12 @@
         <ul class="nav-links">
             <i class="fas fa-plus-circle navCloseBtn"></i>
             <li><a href="/dashboard">Home</a></li>
-            <li><a href="/clinicadd" target="_blank">Add Clinic</a></li>
-            <li><a href="/docadd" target="_blank">Add Document</a></li>
+            <li><a href="/clinicadd" >Add Clinic</a></li>
+            <li><a href="/docadd" >Add Document</a></li>
             <li><a href="/clinics" target="_blank">Clinics List</a></li>
+            <li><a href="/logout">Log Out</a></li>
         </ul>
 
     <% } %>
+    
 </nav>
