--- a/views/docadd.ejs
+++ b/views/docadd.ejs
@@ -37,7 +37,7 @@
                     <img src="./images/add docs.svg" alt="documentAdd">
                 </div>
 
-                <form action="/docadd" method="post" id="docForm">
+                <form action="/docadd" method="post" id="docForm" enctype="multipart/form-data">
 
                     <h3 class="heading">Enter Docu<span>ment Details</span></h3>
 
@@ -47,15 +47,7 @@
                     <textarea name="description" cols="30" rows="5" class="box"
                         placeholder="Enter description of document"></textarea>
 
-                    <label class="box boxfill">
-                        <i class="fas fa-file-upload"></i>
-                        Browse File to Upload
-                        <input type="binData" name="file" class="fileInput" hidden>
-                    </label>
-
-                    <div class="allFiles">
-                        
-                    </div>
+                    <input type="file" name="Prescription" placeholder="Choose Your File" class="box boxfill fileInput" accept="image/*">
 
                     <button type="submit" class="btn">Submit <span class="fas fa-angle-double-right"></span></button>
 
@@ -68,26 +60,7 @@
 
         <script>
 
-            const { value: file } = await Swal.fire({
-                title: 'Select image',
-                input: 'file',
-                inputAttributes: {
-                    'accept': 'file/*',
-                    'aria-label': 'Upload your profile picture'
-                }
-            })
 
-            if (file) {
-                const reader = new FileReader()
-                reader.onload = (e) => {
-                    Swal.fire({
-                        title: 'Your uploaded picture',
-                        imageUrl: e.target.result,
-                        imageAlt: 'The uploaded picture'
-                    })
-                }
-                reader.readAsDataURL(file)
-            }
 
         </script>
 </body>
