--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -49,7 +49,7 @@
 
                             <div class="swiper-slide clinic">
                                 <div class="clinic-heading">
-                                    <h2> <%= clinics[i].clinic_name %> </h2>
+                                     <%= clinics[i].clinic_name %> 
                                 </div>
     
                                 <div class="clinic-content">
