--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -57,7 +57,7 @@
                                     <div class="doc-name">
                                         <span><i class="fas fa-user-nurse clinic-icon"></i> Doctor : <span
                                                 class="each-content">
-                                                <%= clinics[i].doctor_name %> </span></span>
+                                                <%= clinics[i].doctor_name %> </span>
                                     </div>
 
                                     <div class="phone-number">
